// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageCard > should render with many props assigned 1`] = `
<div>
  <article
    class="m-4 flex min-h-[100px] min-w-[100px] flex-nowrap items-center justify-around bg-white text-secondary shadow-md focus-visible:outline-none [&_svg]:fill-secondary size-auto max-w-xs flex-col p-0 *:flex-[1_1_50%] md:h-56 md:w-[650px] md:max-w-none md:flex-row test"
  >
    <div
      class="m-4 flex flex-col items-center justify-start overflow-y-auto"
    >
      <p>
        Testing!
      </p>
    </div>
    <div
      class="relative h-full"
    >
      <img
        alt="Test title"
        src="/static/images/Family1.jpg"
      />
    </div>
  </article>
</div>
`;

exports[`ImageCard > should render with required props 1`] = `
<div>
  <article
    class="m-4 flex min-h-[100px] min-w-[100px] flex-nowrap items-center justify-around bg-white text-secondary shadow-md focus-visible:outline-none [&_svg]:fill-secondary size-auto max-w-xs flex-col p-0 *:flex-[1_1_50%] md:h-56 md:w-[650px] md:max-w-none md:flex-row"
  >
    <div
      class="relative size-full min-h-[225px]"
    >
      <img
        alt="Test title"
        src="/static/images/Family1.jpg"
      />
    </div>
    <div
      class="m-4 flex flex-col items-center justify-start overflow-y-auto"
    >
      <p>
        Testing!
      </p>
    </div>
  </article>
</div>
`;
